--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "name": "barchart",
   "version": "0.1.0",
   "private": true,
+  "homepage": "https://jnforja.github.io/BarchartD3React",
   "dependencies": {
     "bootstrap": "^4.3.1",
     "d3": "^5.12.0",
@@ -19,11 +20,14 @@
     "eslint-plugin-prettier": "^3.1.0",
     "eslint-plugin-react": "^7.14.3",
     "eslint-plugin-react-hooks": "^2.0.1",
+    "gh-pages": "^2.1.1",
     "prettier": "^1.18.2"
   },
   "scripts": {
     "start": "react-scripts start",
     "build": "react-scripts build",
+    "predeploy": "npm run build",
+    "deploy": "gh-pages -d build",
     "test": "react-scripts test",
     "eject": "react-scripts eject"
   },
